--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -10,6 +10,7 @@ set(CMAKE_CXX_FLAGS "$ENV{CXXFLAGS} -rdynamic -O0 -ggdb -std=c++11 -Wall -Wno-de
 set(LIB_SRC
     relar/log.cpp
     relar/util.cpp
+    relar/config.cpp
 )
 
 add_library(relar SHARED ${LIB_SRC})
@@ -19,6 +20,10 @@ add_library(relar SHARED ${LIB_SRC})
 add_executable(test tests/test.cpp)
 add_dependencies(test relar)
 target_link_libraries(test relar)
+
+add_executable(test_config tests/test_config.cpp)
+add_dependencies(test_config relar)
+target_link_libraries(test_config relar)
 
 # 设置可执行文件的输出目录
 SET(EXECUTABLE_OUTPUT_PATH ${PROJECT_SOURCE_DIR}/bin)
